roll back some changes that broke feed page scrolling to top

--- a/index.html
+++ b/index.html
@@ -27,12 +27,14 @@
         catch { }
     }
 
+    /* disable - was making the top bar not follow all the way down the page
     window.visualViewport.onresize = () => {
         updateHeight();
     }
     window.onload = () => {
         updateHeight();
     }
+        */
     </script>
   </head>
   <body>
