Add "Create a Doodle" option for attachments
Implements #68.

This is powered by Tegaki 0.9.4, an existing "oekaki"-style painter app

https://github.com/desuwa/tegaki/tree/master

I looked quickly into glitch-soc's version, which is bespoke, but
built around https://github.com/jakubfiala/atrament for stroke drawing.

I think the whole app that can only do mspaint style brushes
is more fun :v. it has a strong smell of "ancient web" to it.

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
     }
         */
     </script>
+
+    <link href="/src/tegaki/tegaki.css" rel="stylesheet" type="text/css">"
+    <script src="/src/tegaki/tegaki.min.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
