--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#000000" />
-    <link rel="shortcut icon" type="image/ico" href="/src/assets/favicon.ico" />
+    <link rel="shortcut icon" type="image/ico" href="/favicon.ico" />
     <title>pillbug!</title>
     <script>
         if (localStorage.theme === 'dark' || (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
@@ -37,8 +37,8 @@
         */
     </script>
 
-    <link href="/src/tegaki/tegaki.css" rel="stylesheet" type="text/css">"
-    <script src="/src/tegaki/tegaki.min.js"></script>
+    <link href="/tegaki/tegaki.css" rel="stylesheet" type="text/css">"
+    <script src="/tegaki/tegaki.min.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
