--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         */
     </script>
 
-    <link href="/tegaki/tegaki.css" rel="stylesheet" type="text/css">"
+    <link href="/tegaki/tegaki.css" rel="stylesheet" type="text/css">
     <script src="/tegaki/tegaki.min.js"></script>
   </head>
   <body>
